# weather-bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bot.cpp  bot.h  language_support.h  main.cpp  weather_api.cpp  weather_api.h
config/: settings_sample.json
